--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -12,8 +12,7 @@
     <ImageView
         android:id="@+id/list_item_icon"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_launcher" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -25,12 +24,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tomorrow"
             android:id="@+id/list_item_date_textview" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Clear"
             android:id="@+id/list_item_forecast_textview" />
 
     </LinearLayout>
@@ -44,12 +41,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="23"
             android:id="@+id/list_item_high_textview" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="19"
             android:id="@+id/list_item_low_textview" />
     </LinearLayout>
 
